tile title color, update application

--- a/frontend/source/less/modules/tile.less
+++ b/frontend/source/less/modules/tile.less
@@ -56,6 +56,10 @@
             -webkit-line-clamp: 4;
             -webkit-box-orient: vertical;
 
+            &.__nobackground {
+                color: @color-grey--80;
+            }
+
             @media @screen-lg-max {
                 .font(title-small);
             }
