video at max size

--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -40,9 +40,9 @@
             @media @screen-lg {
                 width: 168rem;
             }
-            @media @screen-xl {
-                width: 100%;
-            }
+            // @media @screen-xl {
+            //     width: 100%;
+            // }
         }
 
         .oiplayer {
