print stylesheet hides nav and footer with some other specific adjustments

--- a/frontend/source/pug/video.pug
+++ b/frontend/source/pug/video.pug
@@ -65,7 +65,7 @@ append main
                     .col-md-8
 
                         h4.content-related__title Links
-                        ul.content-related__list
+                        ul.content-related__list.__links
                             li
                                 a( href="https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/" ) https://nrapress.org/articles/20160622/nra-smith-wesson-partner-share-the-safety/
                             li
