less file for collection, body text in collection

--- a/frontend/source/pug/collection.pug
+++ b/frontend/source/pug/collection.pug
@@ -22,6 +22,31 @@ append main
                 
                 .col-md-2
 
+    section
+        .container
+            .row
+                .col-md-2
+                .col-md-8
+                            
+                    .collection-body
+                        p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad Ut enim ad minim #[a(href="http://www.toly.nl") veniam], quis nostrud exercitation. veniam, quis nostrud exercitation ullamco!
+                        p laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    hr
+                .col-md-2
+
+    .heading.__search-filter
+        .container
+            .row     
+                .col-sm-3
+                    h1.search-filter-title.__hidden Search results
+                .col-sm-3
+                .col-sm-3
+                .col-sm-3
+                    .search-filter-container
+                        label.search-filter-label View
+                        button.search-filter-button.__list( href="#" data-select-view-target="list" ) list
+                        button.search-filter-button.__grid.__selected( href="#" data-select-view-target="grid" ) grid
+                     
     section.container
         .row
             .col-md-2
