--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -34,6 +34,7 @@
 // Modules
 // -------------------------------
 @import "modules/carousel";
+@import "modules/collection";
 @import "modules/content";
 @import "modules/content-info";
 @import "modules/content-related";
