--- a/src/main/webapp/collection.jspx
+++ b/src/main/webapp/collection.jspx
@@ -73,6 +73,24 @@
             </div>
           </div>
         </section>
+        
+        <mm:field name="body">
+          <mm:isnotempty>
+            <section>
+              <div class="container">
+                <div class="row">
+                  <div class="col-md-2"><!-- empty --></div>
+                  <div class="col-md-8">
+                    <div class="collection-body"><mm:write escape="paragraph" /></div>
+                    <hr />
+                  </div>
+                  <div class="col-md-2"><!-- empty --></div>
+                </div>
+              </div>
+            </section>
+          </mm:isnotempty>
+        </mm:field>
+                
         <section class="heading __search-filter">
           <div class="container">
             <div class="row">
