--- a/src/main/webapp/error/404.jspx
+++ b/src/main/webapp/error/404.jspx
@@ -12,41 +12,46 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="nl">
 <head>
-  <title>Page Not Found - Tactical Media Files</title>
-  <meta name="description" content="Tactical Media Files" />
-  <meta name="keywords" content="" />
-  <meta name="robots" content="all" />
-  <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/tmf.css')}" />
-  <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/tmf2.css')}" />
-  <link href="${mm:link('/favicon.ico')}" rel="shortcut icon" />
-  <!--[if IE]>
-    <link rel="stylesheet" type="text/css" href="${mm:link('/style/css/ie.css')}" />
-  <![endif]-->
+  <title>404 : Page not found - Tactical Media Files</title>
+  <meta name="description" content="Tactical Media Files error page" />
+  <link href="${mm:link('/favicon.png')}" rel="shortcut icon" />
+  <link href="${mm:link('/styles/css/styles.css')}" rel="stylesheet" type="text/css" />
 </head>
 <body class="error">
-<div class="GlobalContainer">
-  <tmf:top-container />
-  <div class="ArticleContainer">
-	
-	<tmf:header-simple title="404 - Page not found" />
+<div class="page-layout">
+  <tmf:header />
+  <main class="page-layout__main" id="main">
+    <div class="main-content">
+      <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-3">
+              <img data-target-switch="" src="${mm:link('/styles/images/video-1.gif')}" width="100%" />
+            </div>
+            <div class="col-sm-9">
     
-    <h3><jsp:expression>org.mmbase.Version.get()</jsp:expression></h3>
-    <p>The current URL -
-      <jsp:scriptlet>
-        String msg = (String) request.getAttribute("org.mmbase.servlet.error.message");
-        if (msg == null) {
-          msg = (String) request.getAttribute("javax.servlet.error.message");
-        }
-        out.println(msg);
-      </jsp:scriptlet>
-      - does not point to an existing resource in this web-application.
-      <br /><a href="${mm:link('/')}">home</a>
-    </p>
-
-    <div class="clearBoth"><!-- empty --></div>
-  </div><!-- EOF .ArticleContainer -->
-</div><!-- EOF .GlobalContainer -->
-
+              <h2 class="error-title">404 - Page not found</h2>
+              <h3 class="error-subtitle"><jsp:expression>org.mmbase.Version.get()</jsp:expression></h3>
+              <p class="error-intro">The current URL -
+                <jsp:scriptlet>
+                  String msg = (String) request.getAttribute("org.mmbase.servlet.error.message");
+                  if (msg == null) {
+                    msg = (String) request.getAttribute("javax.servlet.error.message");
+                  }
+                  out.println(msg);
+                </jsp:scriptlet>
+                - does not point to an existing resource in this web-application.
+              </p>
+              <p><a href="${mm:link('/')}">home</a></p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
+  </main>
+  <tmf:footer />
+</div>
+<script src="${mm:link('/styles/js/main.js')}"><!-- empty --></script>
 </body>
 </html>
 </mm:cloud>
