error page setup with animation

--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -38,6 +38,7 @@
 @import "modules/content";
 @import "modules/content-info";
 @import "modules/content-related";
+@import "modules/error";
 @import "modules/list";
 @import "modules/listitem";
 @import "modules/tile";
