design adjustments: color, alignment in navigation

--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -1,7 +1,7 @@
 // Colors
 // -------------------------------
 
-@color-primary:                     #00ADEE;
+@color-primary:                     #00a9f2;
 @color-primary-dark:                #008BCE;  
 @color-secondary:                   #6D6D6D;
 
@@ -10,7 +10,7 @@
 @color-white-transparent:           fade(white, 60%);
 @color-grey-transparent:            fade(#808080, 66%);
 @color-primary-transparent:         fade(@color-primary, 50%);
-@color-grey:                        #EFEFEF;
+@color-grey:                        #f2f2f2;
 
 // Grey
 @color-grey--10:                    #F0F0F0;
