--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -56,7 +56,7 @@ append main
             .col-md-3
                 +tile({
                     'type': 'video',
-                    'title': 'A new beginning',
+                    'title': 'NRA and Smith & Wesson Partner to "Share the Safety" With All Americans',
                     'image': 'styles/images/Share_the_Security.jpg'
                 })
             .col-md-3
