--- a/frontend/source/pug/layout/navigation.pug
+++ b/frontend/source/pug/layout/navigation.pug
@@ -5,7 +5,7 @@ nav.navigation
     form( action="list.html" id="form" ).container
         input( type="hidden" name="type" data-select-results-type-target="" )
         .row
-            .col-sm-3.col-sm-offset-1.middle-xs.center-xs
+            .col-sm-4.middle-xs.center-xs.start-sm
                 a.nav__topics( href="#topics" data-select-overlay="topics" ) Topics
                 a.nav__collections( href="#collections" data-select-overlay="collections" ) Collections
             .col-sm-4.middle-xs.center-xs
