design adjustments: background

--- a/frontend/source/less/modules/tile.less
+++ b/frontend/source/less/modules/tile.less
@@ -50,6 +50,7 @@
             position: absolute;
             color: white;
             text-align: center;
+            align-self: center;
             
             overflow: hidden;
             text-overflow: ellipsis;
