--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -67,7 +67,7 @@ append main
                 })
             .col-md-3
                 +tile({
-                    'type': 'article',
+                    'type': 'file',
                     'title': 'A new beginning'
                 })
 
